--- a/crt_portal/static/sass/custom/landing.scss
+++ b/crt_portal/static/sass/custom/landing.scss
@@ -14,7 +14,7 @@ $arrow-height: 24px;
   h1 {
     margin-top: 1rem;
     margin-bottom: 0;
-    line-height: 1.33;
+    line-height: 1.3;
   }
 
   h2 {
@@ -105,6 +105,7 @@ $arrow-height: 24px;
     justify-content: space-between;
 
     padding: 0 1rem 0 6rem;
+
     @include at-media-max(desktop) {
       padding: 0 1rem;
     }
@@ -150,6 +151,7 @@ $arrow-height: 24px;
     font-weight: normal !important;
     margin-top: 0.5rem;
     padding: 0.5rem 0 !important;
+
     &:hover {
       font-weight: bold !important;
     }
@@ -190,14 +192,17 @@ $arrow-height: 24px;
     background-color: #436eac;
     min-height: 600px;
     color: color('white');
+
     .h1__display {
       color: color('white');
     }
+
     .crt-button--large {
       background: color($theme-color-warning);
       color: black !important;
       margin-top: 0;
     }
+
     a,
     a:visited {
       color: white;
@@ -266,6 +271,11 @@ $arrow-height: 24px;
     min-height: 6rem;
     @include at-media-max(desktop) {
       min-height: unset;
+      
+      &.crt-landing--largetext {
+        font-size: $theme-heading-font-size-md-mobile;
+        line-height: 1.3;
+      }
     }
   }
 }
@@ -280,7 +290,7 @@ $arrow-height: 24px;
 
 .crt-landing--rights {
   .crt-landing--rights_text {
-    @include text--heading__large();
+    @include text--heading__medium();
     margin-bottom: 2rem;
 
     @include at-media-max(mobile-lg) {
@@ -299,6 +309,9 @@ $arrow-height: 24px;
 
 .crt-landing--largetext {
   @include text--heading__medium();
+  @include at-media-max(mobile-lg) {
+    @include text--body-copy__medium();
+  }
   margin-top: 0;
   margin-bottom: 1.5rem;
 }
@@ -384,9 +397,8 @@ $arrow-height: 24px;
     }
 
     button {
+      @include text--heading__medium();
       padding: 1rem 1.5rem !important;
-      font-size: $theme-heading-font-size-md;
-      line-height: 1.3;
       font-weight: normal;
       color: color('white');
       min-height: 5rem;
@@ -402,9 +414,11 @@ $arrow-height: 24px;
       background-color: color($theme-color-primary-darker);
       width: 100%;
       height: 100%;
+
       &[aria-expanded='false'] {
         background-image: url(../../img/angle-arrow-down-white.svg) !important;
       }
+
       &[aria-expanded='true'] {
         background-image: url(../../img/angle-arrow-up-white.svg) !important;
       }
@@ -425,9 +439,11 @@ $arrow-height: 24px;
     @include u-shadow(3);
 
     width: calc(100% - 2rem);
+
     @include at-media-max(desktop) {
       width: 100%;
     }
+
     margin-top: 0;
 
     li {
@@ -495,6 +511,8 @@ $arrow-height: 24px;
 .crt-landing--how_to_report {
   .crt-landing--largetext {
     @include at-media-max(mobile-lg) {
+      font-size: $theme-heading-font-size-lg-mobile;
+      line-height: 1.3;
       margin-bottom: 2rem;
     }
   }
@@ -545,7 +563,7 @@ $arrow-height: 24px;
   }
 
   p.crt-landing--text {
-    @include text--body-copy__small();
+    @include text--body-copy__medium;
     margin-bottom: 0;
   }
 }
@@ -553,6 +571,10 @@ $arrow-height: 24px;
 .crt-landing--already_submitted {
   h2 {
     margin-top: 1rem;
+  }
+  .crt-landing--largetext{
+    font-size: $theme-heading-font-size-md-mobile;
+    line-height: 1.3;
   }
   
   .crt-landing--card {
@@ -564,9 +586,11 @@ $arrow-height: 24px;
 
 .crt-landing--card {
   @extend .crt-portal-card;
+
   a {
     font-weight: bold;
   }
+
   padding: 1.5rem 2rem !important;
 }
 
